--- a/admin.html
+++ b/admin.html
@@ -22,7 +22,11 @@
   </section>
 
   <section id="tab-stats" class="card" style="display:none"><h3>Statistiques</h3><div id="statsBox"></div></section>
-  <section id="tab-calendar" class="card" style="display:none"><h3>Calendrier</h3><div id="calBox"></div></section>
+  <section id="tab-calendar" class="card" style="display:none"><div class="cal-title-row">
+  <h3>Calendrier</h3>
+  <button id="calExportBtn" class="cal-export-btn">Exporter</button>
+</div>
+<div id="calBox"></div></section>
   <section id="tab-dispos" class="card" style="display:none"><h3>Disponibilités</h3><div id="disposBox"></div></section>
   <section id="tab-beatmakers" class="card" style="display:none"><h3>Beatmakers</h3><div id="bmEditor"></div></section>
   <section id="tab-export" class="card" style="display:none"><h3>Export</h3><button class="tab" id="exportCsv">Exporter réservations (CSV)</button></section>
