Update admin.html déconnexion

--- a/admin.html
+++ b/admin.html
@@ -24,6 +24,7 @@
   <p class="note" style="margin-top:8px">
     <a href="index.html">← Retour à l'accueil</a>
   </p>
+  <button id="logoutBtn" class="tab">Se déconnecter</button>
 </div>
 
 <div id="adminApp" style="display:none" class="container">
