--- a/admin.html
+++ b/admin.html
@@ -41,7 +41,23 @@
 </div>
 
 <div id="adminApp" style="display:none" class="container">
-  <p><a href="index.html">← Retour à l'accueil</a></p>
+  <div style="display:flex;justify-content:space-between;align-items:center;margin-top:10px;">
+    <p><a href="index.html" style="color:#fff;text-decoration:none;">← Retour à l'accueil</a></p>
+    <button id="logoutBtn" style="
+      background: rgba(255,255,255,0.1);
+      border: 1px solid rgba(255,255,255,0.2);
+      border-radius: 8px;
+      color: #fff;
+      font-weight: 500;
+      padding: 6px 14px;
+      cursor: pointer;
+      backdrop-filter: blur(8px);
+      transition: all 0.3s;
+    " onmouseover="this.style.background='rgba(255,0,0,0.3)';"
+      onmouseout="this.style.background='rgba(255,255,255,0.1)';">
+      🚪 Se déconnecter
+    </button>
+  </div>
   <div class="tabs">
     <button class="tab active" data-tab="services">Services & Prix</button>
     <button class="tab" data-tab="stats">Stats</button>
