Update admin.html scrip refresh

--- a/admin.html
+++ b/admin.html
@@ -67,4 +67,4 @@
   <section id="tab-beatmakers" class="card" style="display:none"><h3>Beatmakers</h3><div id="bmEditor"></div></section>
   <section id="tab-export" class="card" style="display:none"><h3>Export</h3><button class="tab" id="exportCsv">Exporter réservations (CSV)</button></section>
 </div>
-<script src="admin.js"></script></body></html>
+<script src="admin.js?v=caldel1"></script></body></html>
