--- a/admin.html
+++ b/admin.html
@@ -43,4 +43,5 @@
   <section id="tab-beatmakers" class="card" style="display:none"><h3>Beatmakers</h3><div id="bmEditor"></div></section>
   <section id="tab-export" class="card" style="display:none"><h3>Export</h3><button class="tab" id="exportCsv">Exporter réservations (CSV)</button></section>
 </div>
-<script src="admin.js"></script></body></html>
+<script src="admin.js?v=auth2"></script>
+</body></html>
