--- a/admin.html
+++ b/admin.html
@@ -9,17 +9,13 @@
   <button id="loginBtn" type="button">Se connecter</button>
   <p class="note"><a href="index.html">← Retour à l'accueil</a></p>
 </div>
-
+  
 <div id="adminApp" style="display:none" class="container">
   <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px">
     <p><a href="index.html">← Retour à l'accueil</a></p>
     <button id="logoutBtn" class="tab" type="button">Se déconnecter</button>
   </div>
-  <!-- le reste de ton admin (tabs, sections services/stats/calendrier/dispos/etc.) reste identique -->
 
-
-<div id="adminApp" style="display:none" class="container">
-  <p><a href="index.html">← Retour à l'accueil</a></p>
   <div class="tabs">
     <button class="tab active" data-tab="services">Services & Prix</button>
     <button class="tab" data-tab="stats">Stats</button>
@@ -29,19 +25,42 @@
     <button class="tab" data-tab="export">Export</button>
   </div>
 
-  <section id="tab-services" class="card"><h3>Services & Prix (Accueil)</h3><div id="svcEditor"></div>
-    <div style="margin-top:10px"><button class="tab" id="exportServices">Télécharger services.json</button></div>
+  <section id="tab-services" class="card">
+    <h3>Services & Prix (Accueil)</h3>
+    <div id="svcEditor"></div>
+    <div style="margin-top:10px">
+      <button class="tab" id="exportServices">Télécharger services.json</button>
+    </div>
   </section>
 
-  <section id="tab-stats" class="card" style="display:none"><h3>Statistiques</h3><div id="statsBox"></div></section>
-  <section id="tab-calendar" class="card" style="display:none"><div class="cal-title-row">
-  <h3>Calendrier</h3>
-  <button id="calExportBtn" class="cal-export-btn">Exporter</button>
+  <section id="tab-stats" class="card" style="display:none">
+    <h3>Statistiques</h3>
+    <div id="statsBox"></div>
+  </section>
+
+  <section id="tab-calendar" class="card" style="display:none">
+    <h3>Calendrier</h3>
+    <div class="cal-title-row">
+      <button id="calExportBtn" class="cal-export-btn">Exporter</button>
+    </div>
+    <div id="calBox"></div>
+  </section>
+
+  <section id="tab-dispos" class="card" style="display:none">
+    <h3>Disponibilités</h3>
+    <div id="disposBox"></div>
+  </section>
+
+  <section id="tab-beatmakers" class="card" style="display:none">
+    <h3>Beatmakers</h3>
+    <div id="bmEditor"></div>
+  </section>
+
+  <section id="tab-export" class="card" style="display:none">
+    <h3>Export</h3>
+    <button class="tab" id="exportCsv">Exporter réservations (CSV)</button>
+  </section>
 </div>
-<div id="calBox"></div></section>
-  <section id="tab-dispos" class="card" style="display:none"><h3>Disponibilités</h3><div id="disposBox"></div></section>
-  <section id="tab-beatmakers" class="card" style="display:none"><h3>Beatmakers</h3><div id="bmEditor"></div></section>
-  <section id="tab-export" class="card" style="display:none"><h3>Export</h3><button class="tab" id="exportCsv">Exporter réservations (CSV)</button></section>
-</div>
+
 <script src="admin.js?v=auth2"></script>
 </body></html>
